исправил с учетом замечаний

--- a/JSON-differences/index.html
+++ b/JSON-differences/index.html
@@ -9,19 +9,18 @@
   <body>
     <header>
       <div class="header">
-        <div class="header__logo">
-          <a href="#" class="header__logo-link">Json-diff</a>
+        <div class="header-logo">
+          <a href="#" class="header-logo-link">Json-diff</a>
         </div>
-        <div class="header__login">
-          <div class="header__logged-in hidden">
+        <div class="header-login">
+          <div class="header-logged-in hidden">
             <span>Hello, <span id="username"></span>!</span>
             <button class="logout-button">Log out</button>
           </div>
-          <button class="header__login-button" type="button">Log in</button>
+          <button class="header-login-button" type="button">Log in</button>
         </div>
       </div>
     </header>
-
     <main class="wrapper">
       <section class="promo-section">
         <p>
@@ -30,11 +29,10 @@
         </p>
         <a href="#" class="promo-link hidden">Start</a>
       </section>
-
       <section class="login-section hidden">
         <div class="content">
           <div class="login">
-            <p class="login-title">Login Form</p>
+            <h1 class="login-title">Login Form</h1>
             <form class="login-form">
               <label for="login">Login</label>
               <div class="input-block-with-error">
@@ -46,7 +44,6 @@
           </div>
         </div>
       </section>
-
       <section class="main-form-section hidden">
         <div class="content">
           <form class="main-form">
@@ -66,11 +63,9 @@
         </div>
       </section>
     </main>
-
     <footer>
       <p>Copyright 2025 ©</p>
     </footer>
-
     <script src="src/js/index.js" type="module"></script>
   </body>
 </html>
